configure and link dbus-asio
Also convert the fetch-config tool to dbus-asio as a guniea pig.

Signed-off-by: Heiko Hund <heiko@openvpn.net>

--- a/Makefile.am
+++ b/Makefile.am
@@ -113,6 +113,7 @@ AM_CXXFLAGS = \
 	$(CRYPTO_CFLAGS) \
 	$(LIBGLIBGIO_CFLAGS) \
 	$(LIBGLIBGIOUNIX_CFLAGS) \
+	$(LIBDBUSASIO_CFLAGS) \
 	$(LIBJSONCPP_CFLAGS) \
 	$(LIBLZ4_CFLAGS) \
 	$(LIBUUID_CFLAGS) \
@@ -127,6 +128,7 @@ AM_CXXFLAGS = \
 LDADD = \
 	$(CRYPTO_LIBS) \
 	$(LIBGLIBGIO_LIBS) \
+	$(LIBDBUSASIO_LIBS) \
 	$(LIBJSONCPP_LIBS) \
 	$(LIBLZ4_LIBS) \
 	$(LIBUUID_LIBS) \
